@startuml
!theme plain
left to right direction

together {
    interface TaskGroupController<D, A> {
        + ResponseEntity<D> get(long)
        + ResponseEntity<TaskGroupModificationResponseDto> create(long,ModifyTaskGroupDto<A>)
        + ResponseEntity<TaskGroupModificationResponseDto> update(long,ModifyTaskGroupDto<A>)
        + ResponseEntity<Void> delete(long)
    }

    abstract class BaseTaskGroupControllerWithoutRequestMapping<E extends TaskGroup, D, A> {
        # TaskGroupService<E,A> taskGroupService
        # <<Create>> BaseTaskGroupControllerWithoutRequestMapping(TaskGroupService<E,A>)
        # {abstract}D mapToDto(E)
        # {abstract}URI createDetailsUri(long)
    }

    abstract class BaseTaskGroupController<E extends TaskGroup, D, A> {
        # <<Create>> BaseTaskGroupController(TaskGroupService<E,A>)
    }
}

together {
    interface TaskController<D, A> {
        + ResponseEntity<D> get(long)
        + ResponseEntity<TaskModificationResponseDto> create(long,ModifyTaskDto<A>)
        + ResponseEntity<TaskModificationResponseDto> update(long,ModifyTaskDto<A>)
        + ResponseEntity<Void> delete(long)
    }

    abstract class BaseTaskControllerWithoutRequestMapping<E extends Task, D, A> {
        # TaskService<E,A> taskService
        # <<Create>> BaseTaskControllerWithoutRequestMapping(TaskService<E,A>)
        # {abstract}D mapToDto(E)
        # {abstract}URI createDetailsUri(long)
    }

    abstract class BaseTaskController<E extends Task, D, A> {
        # <<Create>> BaseTaskController(TaskService<E,A>)
    }
}

together {
    interface SubmissionController<A> {
        + ResponseEntity<Serializable> submit(SubmitSubmissionDto<A>,boolean,boolean)
        + ResponseEntity<GradingDto> getResult(UUID,int,boolean)
        + ResponseEntity<Page<SubmissionDto<A>>> getSubmissions(Pageable,String,Long,String,SubmissionMode)
    }

    abstract class BaseSubmissionControllerWithoutRequestMapping<A> {
        # SubmissionService<A> submissionService
        # <<Create>> BaseSubmissionControllerWithoutRequestMapping(SubmissionService<A>)
        # {abstract}URI createDetailsUri(UUID)
    }

    abstract class BaseSubmissionController<A> {
        # <<Create>> BaseSubmissionController(SubmissionService<A>)
    }
}

SubmissionController <|.. BaseSubmissionControllerWithoutRequestMapping
BaseSubmissionControllerWithoutRequestMapping <|-- BaseSubmissionController
TaskGroupController <|.. BaseTaskGroupControllerWithoutRequestMapping
BaseTaskGroupControllerWithoutRequestMapping <|-- BaseTaskGroupController
TaskController <|.. BaseTaskControllerWithoutRequestMapping
BaseTaskControllerWithoutRequestMapping <|-- BaseTaskController
@enduml
